2006-06-15  Thomas Schwinge  <tschwinge@gnu.org>

	* open.c (open_seek): Seek into the correct direction for `SEEK_END'.
	Return EINVAL if file pointer would become negative.

2005-01-08  Marco Gerards  <metgerards@student.han.nl>

	* storeio.c (trivfs_modify_stat): Don't initialize st_blocks.

2002-06-22  Roland McGrath  <roland@frob.com>

	* storeio.c (parse_opt): Fix fencepost error in -n arg parsing.
	Reported by Nicola Girardi <nicola@g-n-u.de>.

2002-06-13  Roland McGrath  <roland@frob.com>

	* io.c (trivfs_S_io_read, trivfs_S_io_write): off_t -> loff_t.
	Fix DATA argument type.
	(trivfs_S_file_sync): Add missing last arg.

2002-05-08  Roland McGrath  <roland@frob.com>

	* pager.c (pager_read_page, pager_write_page): int -> size_t

2002-03-10  Roland McGrath  <roland@frob.com>

	* dev.c (dev_read): Return success with *LEN = 0 when reading
	exactly at the end of the store.

2001-12-28  Roland McGrath  <roland@frob.com>

	* dev.h (struct dev): New member `no_fileio' (flag).
	* storeio.c (options): Add --no-file-io/-F.
	(parse_opt): Parse it to set PARAMS->dev->no_fileio.
	(trivfs_append_args): Add --no-file-io if it's set.
	* dev.c (dev_open): Pass STORE_NOFILEIO flag if DEV->no_fileio is set.

2001-08-12  Neal H Walfield  <neal@cs.uml.edu>

	* pager.c: Include <errno.h>.
	(pager_read_page): Use memset, not bzero.
	* storeio.c (check_open_hook): Typo fix in comment.
	(trivfs_modify_stat): STORE->size is a store_offset_t.
	It not a vm_size_t.

2001-05-06  Marcus Brinkmann  <marcus@gnu.org>

	* dev.c (dev_open): Do not create/open the store with
	STORE_INACTIVE, as this doesn't work correctly.  Inactivate the
	store afterwards instead.

2001-02-18  Marcus Brinkmann  <marcus@gnu.org>

	* dev.h (struct dev): New member nperopens.
	* storeio.c (open_hook): Hold device lock and check if this is the
	first open.  If yes, activate the store.
	(close_hook): Hold global_lock and check if this was the last
	open.  If yes, inactivate the store.